<?xml version="1.0" encoding="utf-8"?>
<!-- It's a *BIT* messy -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/host_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gradient_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/gradient_color_speed_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gradient_sampler_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/gradient_sampler_step"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradient_blending"/>

        <Spinner
            android:id="@+id/gradient_blending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <GridLayout
        android:id="@+id/led_color_gradient_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:useDefaultMargins="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarButtonStyle">

        <Button
            android:id="@+id/gradient_add_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradient_add_color" />
        <!-- Should be better way -->
        <Button
            android:id="@+id/gradient_remove_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradient_remove_color_hint"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>