<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".led_color_gradient">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gradient_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/gradient_color_speed_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gradient_sampler_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/gradient_sampler_step"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gradient_blending"/>

                <Spinner
                    android:id="@+id/gradient_blending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/led_color_gradient_host"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <Button
            android:id="@+id/gradient_add_color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradient_add_color" />

</LinearLayout>