<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ConnectionActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/inner_frame_layout_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/connection_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:inputType="numberDecimal"
                android:hint="@string/mqtt_ip_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/connection_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5"
                android:hint="@string/mqtt_port_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_button_text"/>

            <!--<com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"/>-->

    </LinearLayout>

    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>